JumpScript/tests/baselines/reference/asyncDeclare_es6.errors.txt
tests/cases/conformance/async/es6/asyncDeclare_es6.jump(1,9): error TS1040: 'async' modifier cannot be used in an ambient context.


==== tests/cases/conformance/async/es6/asyncDeclare_es6.jump (1 errors) ====
    declare async function foo(): Promise<void>;
            ~~~~~
!!! error TS1040: 'async' modifier cannot be used in an ambient context.